Fix issues with navbar and edit spacing on pages

--- a/src/components/pages/AboutMe/AboutMe.module.css
+++ b/src/components/pages/AboutMe/AboutMe.module.css
@@ -11,7 +11,7 @@
 }
 
 h1 {
-    padding: 4rem;
+    padding: 2rem;
     font-size: 3rem;
 }
 
