--- a/src/components/pages/Projects/Projects.module.css
+++ b/src/components/pages/Projects/Projects.module.css
@@ -25,7 +25,7 @@ h1 {
 
 .proj {
     background-color: white;
-    border: 4px solid black;
+    border: 3px solid black;
     margin-bottom: 2rem;
     padding: 1rem;
     border-radius: 15px;
